--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -4,6 +4,7 @@
   --orange: #ff971c !important;
   --yellow: #ffd500 !important;
   --green: #72cb3b !important;
+  --purple: #9247ed !important;
   --primary: #0341ae !important;
   --success: #72cb3b !important;
   --warning: #ffd500 !important;
