--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -9,3 +9,44 @@ $dark: #020334;
 
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap-vue/src/index.scss';
+
+@font-face {
+  font-family: 'HomepageBaukasten';
+  src: local('HomepageBaukasten'),
+    url(./fonts/HomepageBaukasten-Book.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'HomepageBaukasten-bold';
+  src: local('HomepageBaukasten-bold'),
+    url(./fonts/HomepageBaukasten-Bold.ttf) format('truetype');
+}
+
+* {
+  font-family: 'HomepageBaukasten-bold';
+}
+
+body {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato';
+  height: 100%;
+}
+
+.tab-title {
+  font-size: 3vh;
+  font-weight: bold;
+}
+
+@media (max-width: 991px) {
+  .hide-sm {
+    display: none;
+  }
+}
+
+@media (min-width: 992px) {
+  .hide-lg {
+    display: none !important;
+  }
+}
